<resources>
    <string name="app_name">XCriticalTrainingApp</string>
    <string name="text_email">E-mail</string>
    <string name="edittext_email">Введите e-mail</string>
    <string name="edittext_password">Введите пароль</string>
    <string name="error_email">Неверный e-mail</string>
    <string name="error_password">Неверный пароль</string>
    <string name="forgot_password_">Забыли пароль?</string>
    <string name="change_broker">Сменить брокера</string>
    <string name="text_password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="send">Отправить</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Профиль</string>
    <string name="about_app">О приложении</string>
    <string name="call_support">Связаться с поддержкой</string>
    <string name="notification">Уведомления</string>
    <string name="setting">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="email_profile">user@gmail.com</string>
    <string name="save">Сохранить</string>
    <string name="title">Заголовок</string>
    <string name="text_scenario">Текст сценария</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>